feat: finish first version

--- a/index.html
+++ b/index.html
@@ -1,72 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Software Craftsman</title>
+    <title>Software Craftsman - Crafting Code with Creativity and Precision</title>
+    <meta name="description"
+        content="Crafting code with creativity and precision. Learn more my partners, expertise, and how to contact me.">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&family=Roboto+Mono:wght@400;700&family=Inconsolata:wght@400;700&family=Source+Code+Pro:wght@400;700&display=swap">
     <link rel="stylesheet" href="variables.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&family=Roboto+Mono:wght@400;700&family=Inconsolata:wght@400;700&family=Source+Code+Pro:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <header>
-        <div class="logo" id="logo"></div>
+        <div class="logo" id="logo" alt="Amin Rostami">Amin Rostami</div>
         <nav>
             <ul>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#partnerships">Partnerships</a></li>
+                <li><a href="#expertise">Expertise</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#chat">Chat</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="hero">
-        <div class="matrix-code"></div>
+        <div class="matrix-code" alt="Matrix Code Animation"></div>
         <div class="hero-content">
-            <h1 id="hero-title"></h1>
-            <p>Crafting code with creativity and precision.</p>
-            <a href="#about" class="cta-button">Learn More</a>
+            <h1 id="hero-title">Hello, I'm Amin Rostami, a "Software Craftsman"</h1>
+            <p>Crafting solutions with creativity and precision.</p>
+            <a href="#partnerships" class="cta-button">Learn More</a>
         </div>
     </section>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <div class="timeline">
-            <!-- Timeline content here -->
+    <section id="partnerships">
+        <h2>Partnerships</h2>
+        <div class="partner-container">
+            <div class="partner">
+                <div class="partner-name">
+                    Limoo
+                </div>
+                <div class="partner-description">
+                    collaboration and communication platform
+                </div>
+            </div>
+            <div class="partner">
+                <div class="partner-name">
+                    Gharar
+                </div>
+                <div class="partner-description">
+                    collaboration and communication platforms
+                </div>
+            </div>
+            <div class="partner">
+                <div class="partner-name">
+                    Pinket
+                </div>
+                <div class="partner-description">
+                    online grocery delivery service
+                </div>
+            </div>
+            <div class="partner">
+                <div class="partner-name">
+                    Paxit
+                </div>
+                <div class="partner-description">
+                    internet Marketplace Platforms
+                </div>
+            </div>
+            <div class="partner">
+                <div class="partner-name">
+                    Tapsell
+                </div>
+                <div class="partner-description">
+                    digital advertising platforms
+                </div>
+            </div>
+            <div class="partner">
+                <div class="partner-name">
+                    Metrix
+                </div>
+                <div class="partner-description">
+                    attribution and marketing automation platforms
+                </div>
+            </div>
+            <div class="partner">
+                <div class="partner-name">
+                    Wisdomise
+                </div>
+                <div class="partner-description">
+                    AI application development
+                </div>
+            </div>
+            <div class="partner">
+                <div class="partner-name">
+                    Vira
+                </div>
+                <div class="partner-description">
+                    enterprise application development
+                </div>
+            </div>
         </div>
     </section>
 
-    <section id="projects">
-        <h2>My Starred GitHub Projects</h2>
-        <div class="projects">
-            <!-- Project cards here -->
+    <section id="expertise">
+        <h2>Expertise</h2>
+        <div class="experties-container">
+            <div class="experties">
+                <div class="experties-title">High-Quality Software Development</div>
+                <div class="experties-description">
+                    - Reliability: Develop robust, reliable software that minimizes downtime and operational issues
+                    <div class="space"></div>
+                    - Maintainability: Write clean, maintainable code that makes it easier for future developers to understand and modify
+                    <div class="space"></div>
+                    - Performance: Create efficient, high-performing software that optimizes resource usage and delivers quick responses
+                </div>
+            </div>
+            <div class="experties">
+                <div class="experties-title">Scalability and Flexibility</div>
+                <div class="experties-description">
+                    - Scalable Solutions: Design architectures that can scale with the business, accommodating growth without significant redesigns
+                    <div class="space"></div>
+                    - Flexible Systems: Implement systems that can easily adapt to changing business requirements and market conditions
+                </div>
+            </div>
+            <div class="experties">
+                <div class="experties-title">Cost Efficiency</div>
+                <div class="experties-description">
+                    - Reduced Technical Debt: Through best practices and regular refactoring, minimize technical debt, reducing long-term maintenance costs
+                    
+                    - Efficient Use of Resources: Optimize software to make efficient use of hardware and cloud resources, reducing operational costs
+                </div>
+            </div>
+            <div class="experties">
+                <div class="experties-title">Innovation and Competitive Advantage</div>
+                <div class="experties-description">
+                    - Innovative Solutions: Leverage the latest technologies and methodologies to create innovative solutions that give the business a competitive edge
+                    <div class="space"></div>
+                    - Prototyping and MVPs: Quickly develop prototypes and minimum viable products (MVPs) to test new ideas and concepts in the market
+                </div>
+            </div>
+            <div class="experties">
+                <div class="experties-title">Efficient Development Processes</div>
+                <div class="experties-description">
+                    - Agile Practices: Implement and enhance agile methodologies to ensure efficient project management and delivery
+                    <div class="space"></div>
+                    - CI/CD Pipelines: Set up and maintain continuous integration and continuous deployment pipelines for faster and more reliable software releases
+                </div>
+            </div>
+            <div class="experties">
+                <div class="experties-title">Proactive Problem Solving</div>
+                <div class="experties-description">
+                    - Issue Resolution: Quickly identify and resolve technical issues, minimizing disruption to business operations
+                    <div class="space"></div>
+                    - Root Cause Analysis: Conduct thorough analyses of issues to prevent recurrence and improve overall system stability
+                </div>
+            </div>
+            <div class="experties">
+                <div class="experties-title">Mentorship and Team Development</div>
+                <div class="experties-description">
+                    - Knowledge Sharing: Mentor junior developers, fostering a culture of continuous learning and improvement
+                    <div class="space"></div>
+                    - Best Practices: Promote and enforce coding standards, best practices, and regular code reviews to maintain high quality across the team
+                </div>
+            </div>
+            <div class="experties">
+                <div class="experties-title">Customer-Centric Development</div>
+                <div class="experties-description">
+                    - User Experience: Focus on creating intuitive and user-friendly software that meets customer needs and enhances their experience
+                    <div class="space"></div>
+                    - Feedback Integration: Actively seek and integrate user feedback into the development process to continually improve the product
+                </div>
+            </div>
+            <div class="experties">
+                <div class="experties-title">Business Alignment</div>
+                <div class="experties-description">
+                    - Strategic Insight: Understand the business goals and ensure that the software solutions align with and support these goals
+                    <div class="space"></div>
+                    - Value Delivery: Focus on delivering measurable business value through technology, such as increased revenue, reduced costs, or improved customer satisfaction
+                </div>
+            </div>
         </div>
     </section>
 
     <section id="contact">
-        <h2>Contact Me</h2>
+        <h2>Let's Have a Chat</h2>
         <div class="contact-info">
-            <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-            <a href="https://github.com" target="_blank">GitHub</a>
+            <a href="https://linkedin.com/in/amin-rostami-developer" target="_blank">
+                <i class="fab fa-linkedin"></i>
+                LinkedIn
+            </a>
+            <a href="https://github.com/parvardegr" target="_blank">
+                <i class="fab fa-github"></i>
+                GitHub
+            </a>
+            <a href="https://t.me/elamino" target="_blank">
+                <i class="fab fa-telegram"></i>
+                Telegram
+            </a>
+            <a href="mailto:somthing4die@gmail.com" target="_blank">
+                <i class="fas fa-envelope"></i>
+                Email
+            </a>
         </div>
-        <form>
-            <input type="text" name="name" placeholder="Name">
-            <input type="email" name="email" placeholder="Email">
-            <textarea name="message" placeholder="Message"></textarea>
-            <button type="submit">Send</button>
-        </form>
     </section>
+    
+    <footer>
+        <p>&copy; 2024 Amin Rostami. All Rights Reserved.</p>
+    </footer>
 
-    <section id="chat">
-        <h2>Chat with Me</h2>
-        <div class="chatbox">
-            <!-- Chat interface here -->
-        </div>
-    </section>
-
-    <button id="toggle-theme">Toggle Theme</button>
-
-    <script src="script.js"></script>
 </body>
+
 </html>
