feat: add SEO html tags

--- a/index.html
+++ b/index.html
@@ -5,8 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Software Craftsman - Crafting Code with Creativity and Precision</title>
-    <meta name="description"
-        content="Crafting code with creativity and precision. Learn more my partners, expertise, and how to contact me.">
+    <meta name="description" content="Crafting code with creativity and precision. Learn more about my partners, expertise, and how to contact me.">
+
+    <!-- Open Graph meta tags for better social media integration -->
+    <meta property="og:title" content="Software Craftsman - Crafting Code with Creativity and Precision">
+    <meta property="og:description" content="Crafting code with creativity and precision. Learn more about my partners, expertise, and how to contact me.">
+    <meta property="og:image" content="https://avatars.githubusercontent.com/u/9450866?s=96&v=4">
+    <meta property="og:url" content="https://parvardegr.github.io">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card meta tags for better social media integration -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Software Craftsman - Crafting Code with Creativity and Precision">
+    <meta name="twitter:description" content="Crafting code with creativity and precision. Learn more about my partners, expertise, and how to contact me.">
+    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/9450866?s=96&v=4">
+    
+    <!-- Additional meta tags -->
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Amin Rostami">
+
+    <!-- Canonical link to avoid duplicate content issues -->
+    <link rel="canonical" href="https://parvardegr.github.io">
+
+    <!-- Structured Data Markup (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Amin Rostami",
+      "url": "https://parvardegr.github.io",
+      "sameAs": [
+        "https://linkedin.com/in/amin-rostami-developer",
+        "https://github.com/parvardegr",
+        "https://t.me/elamino"
+      ],
+      "jobTitle": "Software Craftsman",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Amin Rostami"
+      }
+    }
+    </script>
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&family=Roboto+Mono:wght@400;700&family=Inconsolata:wght@400;700&family=Source+Code+Pro:wght@400;700&display=swap">
     <link rel="stylesheet" href="variables.css">
     <link rel="stylesheet" href="styles.css">
