--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Software Craftsman - Crafting Code with Creativity and Precision</title>
     <meta name="description" content="Crafting code with creativity and precision. Learn more about my partners, expertise, and how to contact me.">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <!-- Open Graph meta tags for better social media integration -->
     <meta property="og:title" content="Software Craftsman - Crafting Code with Creativity and Precision">
     <meta property="og:description" content="Crafting code with creativity and precision. Learn more about my partners, expertise, and how to contact me.">
