--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       "jobTitle": "Software Craftsman",
       "worksFor": {
         "@type": "Organization",
-        "name": "Amin Rostami"
+        "name": "420tech"
       }
     }
     </script>
@@ -61,12 +61,12 @@
 
 <body>
     <header>
-        <div class="logo" id="logo" alt="Amin Rostami">Amin Rostami</div>
+        <div class="logo" id="logo" alt="420tech">420tech</div>
         <nav>
             <ul>
+                <li><a href="#contact">Contact</a></li>
                 <li><a href="#partnerships">Partnerships</a></li>
                 <li><a href="#expertise">Expertise</a></li>
-                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -74,14 +74,36 @@
     <section class="hero">
         <div class="matrix-code" alt="Matrix Code Animation"></div>
         <div class="hero-content">
-            <h1 id="hero-title">Hello, I'm Amin Rostami, a "Software Craftsman"</h1>
-            <p>Crafting solutions with creativity and precision.</p>
-            <a href="#partnerships" class="cta-button">Learn More</a>
+            <h1 id="hero-title">Hello, Welcome to 420tech, "Software Craftsman" service</h1>
+            <p>Crafting solutions with creativity and precision</p>
+            <a href="#contact" class="cta-button">Learn More</a>
+        </div>
+    </section>
+
+    <section id="contact">
+        <h2>Let's Have a Chat</h2>
+        <div class="contact-info">
+            <a href="mailto:somthing4die@gmail.com" target="_blank">
+                <i class="fas fa-envelope"></i>
+                Email
+            </a>
+            <a href="https://t.me/elamino" target="_blank">
+                <i class="fab fa-telegram"></i>
+                Telegram
+            </a>
+            <a href="https://linkedin.com/in/amin-rostami-developer" target="_blank">
+                <i class="fab fa-linkedin"></i>
+                LinkedIn
+            </a>
+            <a href="https://github.com/parvardegr" target="_blank">
+                <i class="fab fa-github"></i>
+                GitHub
+            </a>
         </div>
     </section>
 
     <section id="partnerships">
-        <h2>Partnerships</h2>
+        <h2>Trusted Customers</h2>
         <div class="partner-container">
             <div class="partner">
                 <div class="partner-name">
@@ -145,6 +167,21 @@
                 </div>
                 <div class="partner-description">
                     enterprise application development
+                </div>
+            </div>
+            <div class="partner">
+                <div class="partner-name">
+                    Khoneko
+                </div>
+                <div class="partner-description">
+                    roommate search platform
+                </div>
+            </div>
+            <div class="partner">
+                <div class="partner-name">
+                    ...
+                </div>
+                <div class="partner-description">
                 </div>
             </div>
         </div>
@@ -229,31 +266,12 @@
             </div>
         </div>
     </section>
-
-    <section id="contact">
-        <h2>Let's Have a Chat</h2>
-        <div class="contact-info">
-            <a href="https://linkedin.com/in/amin-rostami-developer" target="_blank">
-                <i class="fab fa-linkedin"></i>
-                LinkedIn
-            </a>
-            <a href="https://github.com/parvardegr" target="_blank">
-                <i class="fab fa-github"></i>
-                GitHub
-            </a>
-            <a href="https://t.me/elamino" target="_blank">
-                <i class="fab fa-telegram"></i>
-                Telegram
-            </a>
-            <a href="mailto:somthing4die@gmail.com" target="_blank">
-                <i class="fas fa-envelope"></i>
-                Email
-            </a>
-        </div>
-    </section>
     
     <footer>
-        <p>&copy; 2024 Amin Rostami. All Rights Reserved.</p>
+        <p>&copy; 2024 420tech. MIT License.</p>
+        <a href="https://github.com/parvardegr/parvardegr.github.io" target="_blank">
+            <i class="fab fa-github"></i>
+        </a>
     </footer>
 
 </body>
