feat: minor improvments

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </section>
 
     <section id="contact">
-        <h2>Let's Have a Chat</h2>
+        <h2>Let's Have a Chat about your technical problem!</h2>
         <div class="contact-info">
             <a href="mailto:somthing4die@gmail.com" target="_blank">
                 <i class="fas fa-envelope"></i>
